“持续更新”声明

--- a/_posts/2018-07-12-about-Tex.markdown
+++ b/_posts/2018-07-12-about-Tex.markdown
@@ -24,3 +24,5 @@ tags:
 ## 方法论
 快速上手一种工具，最好是能够和众人一起讨论，一起学习。Tex中国社区中的论坛[CTEX社区](http://bbs.ctex.org/forum.php)提供了这种可能，并且该论坛处于活跃状态，这促使我选用了该工具。
 
+持续更新中（2018.7.12）
+
